# CivGrid

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
DataExtraction/: DataExtraction.cpp  DataExtraction.hpp
